<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:gravity="bottom"
    android:paddingBottom="40dp"
    android:background="@drawable/home_background"
    android:layout_height="match_parent">
    <TextView
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@drawable/custom_ic_background"
        android:text="@string/question_stop_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtYes"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_ic_background"
            android:text="@string/yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/txtNo"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_ic_background"
            android:text="@string/no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>