<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".highScore.HighScoreActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarBangXepHang"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageButton
            android:id="@+id/imageButtonBack"
            android:background="@null"
            android:src="@drawable/ic_navigate_before"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:text="@string/high_score"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:background="@color/colorRed"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <TextView
            android:text="@string/stt"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/user_hs"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/best_score"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/best_reward"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/thoi_gian"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/ty_le"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewBangXepHang"
        android:background="@color/colorBlack"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <LinearLayout
        android:id="@+id/playerHighScore"
        android:background="@color/colorSuccess"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/txtSTTPlayer"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/txtUsernamePlayer"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/txtSoCauTraLoiDungPlayer"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/txtBestRewardPlayer"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/txtTimePlayer"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/txtTyLeTraLoiDungPlayer"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>