<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".information.InformationActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarThongTin"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageButton
            android:id="@+id/imageButtonBack"
            android:background="@null"
            android:src="@drawable/ic_navigate_before"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:text="@string/app_info"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorPrimaryTransparent"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/author_information"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/ykien_donggop"
            android:textAlignment="center"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtGameVersion"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>