<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_background"
        android:orientation="vertical"
        android:baselineAligned="false"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="70dp"
            tools:ignore="ContentDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    tools:ignore="UselessLeaf" />
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/btnChoi"
                            android:layout_width="match_parent"
                            android:text="@string/play"
                            android:textAllCaps="false"
                            android:visibility="gone"
                            android:textColor="@color/colorWhite"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/danger_button"
                            android:layout_height="wrap_content" />
                        <LinearLayout
                            android:id="@+id/khungDangNhap"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/btnDangNhap"
                                android:layout_width="match_parent"
                                android:text="@string/login"
                                android:textAllCaps="false"
                                android:textColor="@color/colorWhite"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:background="@drawable/danger_button"
                                android:layout_height="wrap_content" />
                            <Button
                                android:id="@+id/btnChoiNgay"
                                android:layout_width="match_parent"
                                android:text="@string/play_now"
                                android:textAllCaps="false"
                                android:textColor="@color/colorWhite"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:background="@drawable/primary_button"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </FrameLayout>
                    <Button
                        android:id="@+id/btnDiemCao"
                        android:layout_width="match_parent"
                        android:text="@string/hight_score"
                        android:textAllCaps="false"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/dark_button"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/btnThongTin"
                        android:layout_width="match_parent"
                        android:text="@string/about"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/dark_button"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/btnDangXuat"
                        android:layout_width="match_parent"
                        android:text="@string/logout"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/colorWhite"
                        android:textAllCaps="false"
                        android:visibility="gone"
                        android:background="@drawable/dark_button"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    tools:ignore="UselessLeaf" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frameBackgroundMain"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/colorPrimaryTransparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/fragmentParentMain"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="130dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:layout_height="match_parent"/>
    </FrameLayout>
</FrameLayout>